Updated Lab 7.1-2: Updated the lab description (probabilistic) + code for the VAE lab + lib/
Updated the introduction of the lab 7.1 and 7.2. The VAE intro now focuses on the probabilistic interpretation, and not on the autoencoder paradadigm. The code now focuses on using torch.distributions. The implementition on the VAE, ELBO and visualizations have been updated. Including moving some functions into `lib/`

--- a/7_Unsupervised/7.1-autoencoder.ipynb
+++ b/7_Unsupervised/7.1-autoencoder.ipynb
@@ -9,6 +9,7 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import Image, display, clear_output\n",
+    "from lib import plot_autoencoder_stats\n",
     "import numpy as np\n",
     "%matplotlib nbagg\n",
     "%matplotlib inline\n",
@@ -21,14 +22,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Auto-encoders 101\n",
-    "In this notebook you will implement a simple auto-encoder (AE). We assume that you are already familiar with the basics of neural networks. We'll start by defining an AE similar to the one used for the finetuning step by [Geoffrey Hinton and Ruslan Salakhutdinov](https://www.cs.toronto.edu/~hinton/science.pdf). We'll experiment with the AE setup and try to run it on the MNIST dataset. There has been a wide variety of research into the field of auto-encoders and the technique that you're about to learn is very simple compared to recent advances (e.g. [the Ladder network](https://arxiv.org/abs/1507.02672) and [Variational AEs](https://arxiv.org/abs/1312.6114)). However, the basic idea stays the same.\n",
+    "# Unsupservised Learning \n",
     "\n",
-    "AEs are used within unsupervised learning, in which you do not have a target $y$. Instead it *encodes* an input $x$ into a latent state $z$ and decodes $z$ into a reconstruction $\\hat{x}$. This way the parameters of the network can be optimized w.r.t. the difference between $x$ and $\\hat{x}$.\n",
+    "## Labelling Data is Expensive\n",
     "\n",
-    "<img src=\"../static_files/AE.png\" width=\"300px\"/>\n",
+    "In supervised machine learning, one aims at learning a mapping $f_{\\psi} : \\mathbf{x} \\in \\mathcal{R}^P \\rightarrow \\mathbf{y}$ from observations $\\mathbf{x}$ to the target $\\mathbf{y}$ using a dataset $\\mathcal{D} = \\{\\mathbf{x}_i, \\mathbf{y}_i\\}_{i=1, \\dots, N}$ of finite size N (e.g. image classification, translation). Because of the curse of dimensionality, high-dimensional inputs (images) and complex the models (deep learning) require large datasets (million of pairs $(\\mathbf{x}, \\mathbf{y})$). In practice, labelling data is expensive (e.g. marking the presence of cancer in X-ray chest scans). \n",
     "\n",
-    "Depending on the input distribution, the difference can be measured in various ways, e.g. mean squared error (MSE). In many applications the auto-encoder will find an internal state of each data point corresponding to a feature. So if we are to model the MNIST dataset, one could expect that the internal state would correspond to a digit-class and/or the shape.\n",
+    "## Compression is Comprehension: Learning without Target\n",
+    "\n",
+    "In order to overcome the curse of dimensionality, we aim at learning a compressed representation $\\mathbf{z} \\in \\mathcal{R}^M$ of $\\mathbf{x}$ such that $M < P$ and there is a mapping $g_{\\phi}: \\mathbf{x} \\rightarrow \\mathbf{z}$ linking each data point to its representation. Ideally, $\\mathbf{z}$ is low-dimensional set of features which efficiently describes $\\mathbf{x}$. As an illustration, when modelling pictures of celebrities (CelebA dataset), the set of facial features (eye color, age, hair lenth, etc..) is a compressed (and lossy) representation of $\\mathbf{x}$. In practice, the representation  $\\mathbf{z}$ is unobservable and [unlikely to overlap with such known features](https://arxiv.org/abs/1811.12359). Yet, the representation $\\mathbf{z}$ is low dimensional and learning a mapping $f_{\\psi} : \\mathbf{z} \\in \\mathcal{R}^M \\rightarrow \\mathbf{y}$ is often easier.\n",
+    "\n",
+    "Whereas labelling the data is expensive, observations $\\mathbf{x}$ are cheap to acquire. In many cases, one can scrap the web to gather a large collection of images or text. As a result, large deep learning models can be deployed to learn $g_{\\phi}$, and smaller / data-efficient models can be applied downstream to solve the supervised task.\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Auto-encoders: Compression as a Generation Process\n",
+    "In this notebook you will implement a simple auto-encoder (AE). We assume that you are already familiar with the basics of neural networks. We'll start by defining an AE similar to the one used for the finetuning step by [Geoffrey Hinton and Ruslan Salakhutdinov](https://www.cs.toronto.edu/~hinton/science.pdf). We'll experiment with the AE setup and try to run it on the MNIST dataset. There has been a wide variety of research into the field of auto-encoders and the technique that you're about to learn is very simple compared to modern methods: Masked Autoencoders ([MADE](https://arxiv.org/abs/1502.03509), [BERT](https://arxiv.org/abs/1810.04805)), Variational Autoencoders ([VAE](https://arxiv.org/abs/1312.6114), [VQ-VAE](https://arxiv.org/abs/1711.00937), [BIVA](https://arxiv.org/abs/1902.02102), [NVAE](https://arxiv.org/abs/2007.03898)).\n",
+    "\n",
+    "In unsupervised learning, we aim at learning compressed representations $\\mathbf{z} \\in \\mathcal{P}$ of $\\mathbf{x} \\in \\mathcal{R}$ where $ M < P$. The architecture of an autoencoder can be decomposed in two steps:\n",
+    "\n",
+    "1. *Encoding* $\\mathbf{x}$ into a low-dimensional representation $\\mathbf{z}$ using a neural network $g_{\\phi} : \\mathbf{x} \\rightarrow \\mathbf{z}$.\n",
+    "2. *Decoding* the representation $\\mathbf{z}$ into a reconstruction $\\hat{\\mathbf{x}} = h_\\theta(\\mathbf{z}) \\in \\mathcal{R}^P$.\n",
+    "\n",
+    "Because $M < P$, the encoding acts as an information bottleneck: only part of the information describing $\\mathbf{x}$ can be encoded into $\\mathbf{z}$ as long as $M$ is sufficiently small.\n",
+    "\n",
+    "Learning the parameters of the autoencoder relies on two aspects:\n",
+    "\n",
+    "1. A distance in the observation space $d : \\mathcal{R}^{P} \\times \\mathcal{R}^{P} \\rightarrow \\mathcal{R}$ (e.g. MSE), measuring the reconstruction quality.\n",
+    "2. Using backpropagation coupled with stochastic gradient descent (SGD) to optimize the parameters $\\{\\phi, \\theta\\}$ w.r.t $L := \\frac{1}{N} \\sum_i d(x_i, h_{\\theta}(g_{\\phi}(\\mathbf{x})))$.\n",
+    "\n",
+    "<img src=\"static/autoencoder.png\" />\n",
     "\n",
     "*The exercises are found at the bottom of the notebook*"
    ]
@@ -67,7 +90,7 @@
     "# The digit classes to use\n",
     "classes = [3, 7]\n",
     "\n",
-    "def stratified_sampler(labels):\n",
+    "def stratified_sampler(labels, classes):\n",
     "    \"\"\"Sampler that only picks datapoints corresponding to the specified classes\"\"\"\n",
     "    from functools import reduce\n",
     "    (indices,) = np.where(reduce(lambda x, y: x | y, [labels.numpy() == i for i in classes]))\n",
@@ -78,9 +101,9 @@
     "# The loaders perform the actual work\n",
     "batch_size = 64\n",
     "train_loader = DataLoader(dset_train, batch_size=batch_size,\n",
-    "                          sampler=stratified_sampler(dset_train.train_labels), pin_memory=cuda)\n",
+    "                          sampler=stratified_sampler(dset_train.targets, classes), pin_memory=cuda)\n",
     "test_loader  = DataLoader(dset_test, batch_size=batch_size, \n",
-    "                          sampler=stratified_sampler(dset_test.test_labels), pin_memory=cuda)"
+    "                          sampler=stratified_sampler(dset_test.targets, classes), pin_memory=cuda)"
    ]
   },
   {
@@ -151,9 +174,10 @@
     "        # apply sigmoid to output to get pixel intensities between 0 and 1\n",
     "        x_hat = torch.sigmoid(self.decoder(z))\n",
     "        \n",
-    "        outputs['z'] = z\n",
-    "        outputs['x_hat'] = x_hat\n",
-    "        return outputs\n",
+    "        return {\n",
+    "            'z': z,\n",
+    "            'x_hat': x_hat\n",
+    "        }\n",
     "\n",
     "\n",
     "# Choose the shape of the autoencoder\n",
@@ -200,19 +224,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.autograd import Variable\n",
-    "\n",
     "# test the forward pass\n",
     "# expect output size of [32, num_features]\n",
-    "images, labels = next(iter(train_loader))\n",
-    "print(images.shape)\n",
+    "x, y = next(iter(train_loader))\n",
+    "print(f\"x.shape = {x.shape}\")\n",
     "\n",
-    "x = Variable(images)\n",
     "if cuda:\n",
     "    x = x.cuda()\n",
     "\n",
     "outputs = net(x)\n",
-    "print(outputs['x_hat'].shape)"
+    "print(f\"x_hat.shape = {outputs['x_hat'].shape}\")\n"
    ]
   },
   {
@@ -227,13 +248,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
-    "import os\n",
+    "from sklearn.manifold import TSNE\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
     "num_epochs = 100\n",
-    "tmp_img = \"tmp_ae_out.png\"\n",
     "\n",
     "train_loss = []\n",
     "valid_loss = []\n",
@@ -245,7 +270,6 @@
     "    # Go through each batch in the training dataset using the loader\n",
     "    # Note that y is not necessarily known as it is here\n",
     "    for x, y in train_loader:\n",
-    "        x = Variable(x)\n",
     "        \n",
     "        if cuda:\n",
     "            x = x.cuda()\n",
@@ -270,7 +294,6 @@
     "        \n",
     "        # Just load a single batch from the test loader\n",
     "        x, y = next(iter(test_loader))\n",
-    "        x = Variable(x)\n",
     "        \n",
     "        if cuda:\n",
     "            x = x.cuda()\n",
@@ -279,7 +302,6 @@
     "\n",
     "        # We save the latent variable and reconstruction for later use\n",
     "        # we will need them on the CPU to plot\n",
-    "        #x = x\n",
     "        x_hat = outputs['x_hat']\n",
     "        z = outputs['z'].cpu().numpy()\n",
     "\n",
@@ -289,72 +311,19 @@
     "    \n",
     "    if epoch == 0:\n",
     "        continue\n",
+    "\n",
+    "    # live plotting of the trainig curves and representation\n",
+    "    plot_autoencoder_stats(x=x,\n",
+    "                           x_hat=x_hat,\n",
+    "                           z=z,\n",
+    "                           y=y,\n",
+    "                           train_loss=train_loss,\n",
+    "                           valid_loss=valid_loss,\n",
+    "                           epoch=epoch,\n",
+    "                           classes=classes,\n",
+    "                           dimensionality_reduction_op=None) # = lambda z: TSNE(n_components=2).fit_transform(z)\n",
     "    \n",
-    "    # -- Plotting --\n",
-    "    f, axarr = plt.subplots(2, 2, figsize=(20, 20))\n",
-    "\n",
-    "    # Loss\n",
-    "    ax = axarr[0, 0]\n",
-    "    ax.set_title(\"Error\")\n",
-    "    ax.set_xlabel('Epoch')\n",
-    "    ax.set_ylabel('Error')\n",
-    "\n",
-    "\n",
-    "    ax.plot(np.arange(epoch+1), train_loss, color=\"black\")\n",
-    "    ax.plot(np.arange(epoch+1), valid_loss, color=\"gray\", linestyle=\"--\")\n",
-    "    ax.legend(['Training error', 'Validation error'])\n",
-    "\n",
-    "    # Latent space\n",
-    "    ax = axarr[0, 1]\n",
-    "\n",
-    "    ax.set_title('Latent space')\n",
-    "    ax.set_xlabel('Dimension 1')\n",
-    "    ax.set_ylabel('Dimension 2')\n",
-    "    \n",
-    "    # If you want to use a dimensionality reduction method you can use\n",
-    "    # for example PCA by projecting on two principal dimensions\n",
-    "    # z = PCA(n=2).fit_transform(z)\n",
-    "\n",
-    "    colors = iter(plt.get_cmap('Set1')(np.linspace(0, 1.0, len(classes))))\n",
-    "    for c in classes:\n",
-    "        ax.scatter(*z[y.numpy() == c].T, c=next(colors), marker='o')\n",
-    "\n",
-    "    ax.legend(classes)\n",
-    "\n",
-    "    # Inputs\n",
-    "    ax = axarr[1, 0]\n",
-    "    ax.set_title('Inputs')\n",
-    "    ax.axis('off')\n",
-    "\n",
-    "    rows = 8\n",
-    "    columns = batch_size // rows\n",
-    "\n",
-    "    canvas = np.zeros((28*rows, columns*28))\n",
-    "    for i in range(rows):\n",
-    "        for j in range(columns):\n",
-    "            idx = i % columns + rows * j\n",
-    "            canvas[i*28:(i+1)*28, j*28:(j+1)*28] = x[idx].reshape((28, 28))\n",
-    "    ax.imshow(canvas, cmap='gray')\n",
-    "\n",
-    "    # Reconstructions\n",
-    "    ax = axarr[1, 1]\n",
-    "    ax.set_title('Reconstructions')\n",
-    "    ax.axis('off')\n",
-    "\n",
-    "    canvas = np.zeros((28*rows, columns*28))\n",
-    "    for i in range(rows):\n",
-    "        for j in range(columns):\n",
-    "            idx = i % columns + rows * j\n",
-    "            canvas[i*28:(i+1)*28, j*28:(j+1)*28] = x_hat[idx].reshape((28, 28))\n",
-    "\n",
-    "    ax.imshow(canvas, cmap='gray')\n",
-    "\n",
-    "    plt.savefig(tmp_img)\n",
-    "    plt.close(f)\n",
-    "    display(Image(filename=tmp_img))\n",
-    "    clear_output(wait=True)\n",
-    "\n",
-    "    os.remove(tmp_img)"
+    "   "
    ]
   },
   {
@@ -366,9 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Assignment 1 - Analyzing the AE\n",
     "1. The above implementation of an AE is very simple.\n",
@@ -379,7 +346,7 @@
     "       \n",
     "2. Currently we optimize w.r.t. mean squared error. \n",
     "    - Find another error function that could fit this problem better\n",
-    "    - Evaluate whether the error function is a better choice and explain your findings\n",
+    "    - Evaluate whether the similarity function $d$ is a better choice and explain your findings\n",
     "\n",
     "3. Complexity of the bottleneck.\n",
     "    - Increase the number of units in the latent layer and train\n",
@@ -388,9 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Assignment 2 - Adding classification for semi-supervised learning\n",
     "\n",
@@ -398,7 +363,7 @@
     "\n",
     "1. Build a simple classifier (like the ones from week1) where you:\n",
     "    - Train on the labeled dataset and evaluate the results\n",
-    "2. Build a second classifier and train on the latent output $z$ of the AE.\n",
+    "2. Build a second classifier and train on the latent output $\\mathbf{z}$ of the AE.\n",
     "3. Build a third classifier and train on the reconstructions of the AE.\n",
     "4. Evaluate the classifiers against each other and implement a model that improves the classification by combining the input, latent output, and reconstruction.\n",
     "\n",
@@ -408,10 +373,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
-    "def uniform_stratified_sampler(labels, n=None):\n",
+    "def uniform_stratified_sampler(labels, classes, n=None):\n",
     "    \"\"\"\n",
     "    Stratified sampler that distributes labels uniformly by\n",
     "    sampling at most n data points per class\n",
@@ -436,18 +405,22 @@
     "\n",
     "# Large pool of unlabelled data\n",
     "unlabelled = DataLoader(dset_train, batch_size=batch_size, \n",
-    "                        sampler=stratified_sampler(dset_train.train_labels), pin_memory=cuda)\n",
+    "                        sampler=stratified_sampler(dset_train.train_labels, classes=classes), pin_memory=cuda)\n",
     "\n",
     "# Smaller pool of labelled data\n",
     "labelled = DataLoader(dset_train, batch_size=batch_size,\n",
-    "                      sampler=uniform_stratified_sampler(dset_train.train_labels, labels_per_class),\n",
+    "                      sampler=uniform_stratified_sampler(dset_train.train_labels, classes=classes, labels_per_class),\n",
     "                      pin_memory=cuda)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "from itertools import cycle\n",
@@ -462,8 +435,6 @@
     "    \n",
     "    # Go through both labelled and unlabelled data\n",
     "    for (x, y), (u, _) in zip(cycle(labelled), unlabelled):\n",
-    "        # Transfer to GPU if needed\n",
-    "        x, y, u = Variable(x), Variable(y), Variable(u)\n",
     "        \n",
     "        if cuda:\n",
     "            x, y, u = x.cuda(), y.cuda(), u.cuda()\n",
@@ -478,6 +449,46 @@
     "        loss.backward()\n",
     "        optimizer.step()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -496,9 +507,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
