--- a/7_Unsupervised/7.1-autoencoder.ipynb
+++ b/7_Unsupervised/7.1-autoencoder.ipynb
@@ -9,13 +9,17 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import Image, display, clear_output\n",
-    "from lib import plot_autoencoder_stats\n",
     "import numpy as np\n",
     "%matplotlib nbagg\n",
     "%matplotlib inline\n",
     "import seaborn as sns\n",
     "sns.set_style(\"whitegrid\")\n",
-    "sns.set_palette(sns.dark_palette(\"purple\"))"
+    "sns.set_palette(sns.dark_palette(\"purple\"))\n",
+    "\n",
+    "try:\n",
+    "    from plotting import plot_autoencoder_stats\n",
+    "except:\n",
+    "    print(f\"If using Colab, you may need to upload `plotting.py`\")"
    ]
   },
   {
