--- a/7_Unsupervised/7.2-EXE-variational-autoencoder.ipynb
+++ b/7_Unsupervised/7.2-EXE-variational-autoencoder.ipynb
@@ -24,7 +24,12 @@
     "%matplotlib inline\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
-    "sns.set_style(\"whitegrid\")"
+    "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "try:\n",
+    "    from plotting import make_vae_plots\n",
+    "except:\n",
+    "    print(f\"If using Colab, you may need to upload `plotting.py`\")"
    ]
   },
   {
@@ -293,10 +298,13 @@
     "        \n",
     "    def rsample(self) -> Tensor:\n",
     "        \"\"\"sample `z ~ N(z | mu, sigma)` (with the reparameterization trick) \"\"\"\n",
+    "        return self.mu + self.sample_epsilon() * self.sigma\n",
     "        raise NotImplementedError # <- your code\n",
     "        \n",
     "    def log_prob(self, z:Tensor) -> Tensor:\n",
     "        \"\"\"return the log probability: log `p(z)`\"\"\"\n",
+    "        C = - 0.5 * math.log(2 * math.pi)\n",
+    "        return C - self.sigma.log() - 0.5 * ((z - self.mu)/self.sigma)**2\n",
     "        raise NotImplementedError # <- your code"
    ]
   },
@@ -753,8 +761,6 @@
    },
    "outputs": [],
    "source": [
-    "from lib.plotting import make_vae_plots\n",
-    "\n",
     "num_epochs = 100\n",
     "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
