--- a/7_Unsupervised/7.1-autoencoder.ipynb
+++ b/7_Unsupervised/7.1-autoencoder.ipynb
@@ -18,8 +18,9 @@
     "\n",
     "try:\n",
     "    from plotting import plot_autoencoder_stats\n",
-    "except:\n",
-    "    print(f\"If using Colab, you may need to upload `plotting.py`\")"
+    "except Exception as ex:\n",
+    "    print(f\"If using Colab, you may need to upload `plotting.py`\")\n",
+    "    print(ex)"
    ]
   },
   {
