--- a/7_Unsupervised/7.2-EXE-variational-autoencoder.ipynb
+++ b/7_Unsupervised/7.2-EXE-variational-autoencoder.ipynb
@@ -28,8 +28,9 @@
     "\n",
     "try:\n",
     "    from plotting import make_vae_plots\n",
-    "except:\n",
-    "    print(f\"If using Colab, you may need to upload `plotting.py`\")"
+    "except Exception as ex:\n",
+    "    print(f\"If using Colab, you may need to upload `plotting.py`\")\n",
+    "    print(ex)"
    ]
   },
   {
@@ -298,13 +299,10 @@
     "        \n",
     "    def rsample(self) -> Tensor:\n",
     "        \"\"\"sample `z ~ N(z | mu, sigma)` (with the reparameterization trick) \"\"\"\n",
-    "        return self.mu + self.sample_epsilon() * self.sigma\n",
     "        raise NotImplementedError # <- your code\n",
     "        \n",
     "    def log_prob(self, z:Tensor) -> Tensor:\n",
     "        \"\"\"return the log probability: log `p(z)`\"\"\"\n",
-    "        C = - 0.5 * math.log(2 * math.pi)\n",
-    "        return C - self.sigma.log() - 0.5 * ((z - self.mu)/self.sigma)**2\n",
     "        raise NotImplementedError # <- your code"
    ]
   },
