added instructions to upload the file `plotting.py`

--- a/7_Unsupervised/7.1-autoencoder.ipynb
+++ b/7_Unsupervised/7.1-autoencoder.ipynb
@@ -19,7 +19,9 @@
     "try:\n",
     "    from plotting import plot_autoencoder_stats\n",
     "except Exception as ex:\n",
-    "    print(f\"If using Colab, you may need to upload `plotting.py`\")\n",
+    "    print(f\"If using Colab, you may need to upload `plotting.py`. \\\n",
+    "          \\nIn the left pannel, click `Files > upload to session storage` and select the file `plotting.py` from your computer \\\n",
+    "          \\n---------------------------------------------\")\n",
     "    print(ex)"
    ]
   },
