--- a/7_Unsupervised/7.2-EXE-variational-autoencoder.ipynb
+++ b/7_Unsupervised/7.2-EXE-variational-autoencoder.ipynb
@@ -29,7 +29,9 @@
     "try:\n",
     "    from plotting import make_vae_plots\n",
     "except Exception as ex:\n",
-    "    print(f\"If using Colab, you may need to upload `plotting.py`\")\n",
+    "    print(f\"If using Colab, you may need to upload `plotting.py`. \\\n",
+    "          \\nIn the left pannel, click `Files > upload to session storage` and select the file `plotting.py` from your computer \\\n",
+    "          \\n---------------------------------------------\")\n",
     "    print(ex)"
    ]
   },
